--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
    <meta name="keywords" content="amaa, american martial arts academy, karate, tang soo do, martial arts, fitness, schools, about" />
    <meta name="description" content="AMAA Home Page.">
    <meta name="author" content="Aaron Took">
+   <meta name="google-site-verification" content="google146d3d4dc14f2346.html">
    <meta charset="utf-8" />
 </head>
 
