--- a/training-and-testing.html
+++ b/training-and-testing.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
    <!--
-   Author: Aaron Took
+   Author: Joseph Lefkovitz
    Date:   4/25/2022
    
    Filename: training-and-testing.html
@@ -12,13 +12,12 @@
    <link rel="icon" type="image/x-icon" href="images/amaa_favicon.ico">
    <link href="css/blank.css" rel="stylesheet" />
    <link href="css/base.css" rel="stylesheet" />
-   <link href="css/utils.css" rel="stylesheet" />
    <link href="css/training-and-testing.css" rel="stylesheet" />
    <link href="css/print.css" rel="stylesheet" media="print" />
    <meta name="viewport" content="width=device-width,initial-scale=1" />
    <meta name="keywords" content="amaa, american martial arts academy, karate, tang soo do, martial arts, fitness, training, testing, forms" />
    <meta name="description" content="AMAA Page with registration, form videos, and testing information.">
-   <meta name="author" content="Aaron Took">
+   <meta name="author" content="Joseph Lefkovitz">
    <meta charset="utf-8" />
 </head>
 
