--- a/history-and-tradition.html
+++ b/history-and-tradition.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
    <!--
-   Author: Aaron Took
+   Author: Joseph Lefkovitz
    Date:   4/25/2022
    
    Filename: history-and-tradition.html
@@ -17,7 +17,7 @@
    <meta name="viewport" content="width=device-width,initial-scale=1" />
    <meta name="keywords" content="amaa, american martial arts academy, karate, tang soo do, martial arts, fitness, history, tradition, values" />
    <meta name="description" content="AMAA Page with history and tradition of AMAA and Tang Soo Do.">
-   <meta name="author" content="Aaron Took">
+   <meta name="author" content="Joseph Lefkovitz">
    <meta charset="utf-8" />
 </head>
 
