--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
       <h1 id="pageTitle">Contact Us</h1>
       <div id="form">
          <p class="welcomeMessage">Have comments, questions, or concerns?<br /><br />Feel free to contact us for any reason using the form below!<br />You can also reach us on <a class="externalLink" target="_blank" href="https://www.facebook.com/LOKarate/">Facebook</a> or by <a class="externalLink" target="_blank" href="mailto:KarateAMAA@gmail.com">Email</a> at KarateAMAA@gmail.com.<br /><br /></p>
-         <form id="contact" method="post" action="https://AMAA-CONTACT.herokuapp.com/send/">
+         <form id="contact" method="post" action="home.html">
             <legend><strong>Contact Form</strong></legend>
             <h2 style="margin-top:10px;" class="formSectionLabel">Contact Information</h2>
             <em style="font-size:10px;color:black;margin:5px;">* Indicates required field</em>
@@ -82,7 +82,7 @@
             </div>
             <div class="formRow">
                <label for="phone">Cell Phone Number</label>
-               <input type="tel" name="phone" id="phone" placeholder="nnn-nnn-nnnn" pattern="/^\\(?([0-9]{3})\\)?[-.\\s]?([0-9]{3})[-.\\s]?([0-9]{4})$/">
+               <input type="tel" name="phone" id="phone" placeholder="nnn-nnn-nnnn">
             </div>
             <div class="formRow">
                <input name="doNotContact" id="doNotContact" value="yes" type="checkbox" />
