Updated contact.html and forms.css for bugfix.
Changed submit button to regular button with a link to the homepage.

--- a/contact.html
+++ b/contact.html
@@ -133,7 +133,7 @@
                <textarea id="comment" name="comment" maxlength="1500" required></textarea>
             </div>
             <div class="buttons">
-               <input type="submit" value="Submit" />
+               <a href="home.html"><input type="button" value="Submit" /></a>
                <input type="reset" value="Reset" />
             </div>
          </form>
