--- a/training-and-testing.html
+++ b/training-and-testing.html
@@ -70,7 +70,7 @@
       <hr class="wideLine">
       <div id="form-videos">
          <h1 id="pageTitle">Form Videos</h1>
-         <p class="welcomeMessage">All students are strongly encouraged to practice at home.<br />In general, it is the students who practice who make the most progress.<br />Videos of our forms can be found oun our <a class="externalLink" target="_blank" href="https://www.youtube.com/channel/UC12kFpflVsJ8dDhBDTJZQYA">Youtube Channel</a>.</p>
+         <p class="welcomeMessage">All students are strongly encouraged to practice at home.<br />In general, it is the students who practice who make the most progress.<br />Videos of our forms can be found on our <a class="externalLink" target="_blank" href="https://www.youtube.com/channel/UC12kFpflVsJ8dDhBDTJZQYA">Youtube Channel</a>.</p>
       </div>
       <hr class="wideLine">
       <div id="testing-documents">
