--- a/home.html
+++ b/home.html
@@ -86,7 +86,7 @@
       
       <blockquote>
          <p><em>“Martial arts gives balance, cardio, strength training, and mental awareness. It's a mental and physical activity, which most people don't get. Very few sports offer that.”</em></p>
-         <p><em>Micheal Mannino<br />International breaking champion, 5th Dan</em></p>
+         <p><em>Michael Mannino<br />International breaking champion, 5th Dan</em></p>
       </blockquote>
       
       <div class="videoContainer">
