--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
    <link href="css/home.css" rel="stylesheet" />
    <link href="css/print.css" rel="stylesheet" media="print" />
    <meta name="viewport" content="width=device-width,initial-scale=1" />
-   <meta name="keywords" content="amaa, american martial arts academy, karate, tang soo do, martial arts, fitness, schools, about" />
+   <meta name="keywords" content="amaa, american martial arts academy, karate, tang soo do, martial arts, ohio, michigan" />
    <meta name="description" content="AMAA Home Page.">
    <meta name="author" content="Joseph Lefkovitz">
    <meta charset="utf-8" />
