Add and update files via upload.
Updated "Training and Testing" to include separate Englewood Requirements.

--- a/training-and-testing.html
+++ b/training-and-testing.html
@@ -70,7 +70,7 @@
       <hr class="wideLine">
       <div id="form-videos">
          <h1 id="pageTitle">Form Videos</h1>
-         <p class="welcomeMessage">All students are strongly encouraged to practice at home.<br />In general, it is the students who practice who make the most progress.<br />Videos of our forms can be found on our <a class="externalLink" target="_blank" href="https://www.youtube.com/channel/UC12kFpflVsJ8dDhBDTJZQYA">Youtube Channel</a>.</p>
+         <p class="welcomeMessage">All students are strongly encouraged to practice at home.<br />In general, it is the students who practice who make the most progress.<br />Videos of our forms can be found oun our <a class="externalLink" target="_blank" href="https://www.youtube.com/channel/UC12kFpflVsJ8dDhBDTJZQYA">Youtube Channel</a>.</p>
       </div>
       <hr class="wideLine">
       <div id="testing-documents">
@@ -101,6 +101,7 @@
             <a class="downloadTestingForm" target="_blank" href="attachments/board-breaking.pdf"><button>Board Breaking Manual</button></a>
             <a class="downloadTestingForm" target="_blank" href="attachments/training-log.pdf"><button>Teaching and Training Log</button></a>
             <a class="downloadTestingForm" target="_blank" href="attachments/testing-requirements.pdf"><button>All Requirements</button></a>
+            <a class="downloadTestingForm" target="_blank" href="attachments/testing-requirements-englewood.doc"><button>All Requirements (Englewood School)</button></a>
             <a class="downloadTestingForm" target="_blank" href="attachments/high-rank-testing-form.pdf"><button>High Rank Testing Registration Form</button></a>
             <a class="downloadTestingForm" target="_blank" href="attachments/black-belt-requirements.pdf"><button>Black Belt Requirements</button></a>
             <a class="downloadTestingForm" target="_blank" href="attachments/black-belt-testing-form.pdf"><button>Black Belt Testing Registration Form</button></a>
