--- a/home.html
+++ b/home.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
    <!--
-   Author: Joseph Lefkovitz
-   Date:   4/25/2022
+   Author: Aaron Took
+   Date:   1/8/2023
    
    Filename: home.html
    -->
@@ -15,9 +15,9 @@
    <link href="css/home.css" rel="stylesheet" />
    <link href="css/print.css" rel="stylesheet" media="print" />
    <meta name="viewport" content="width=device-width,initial-scale=1" />
-   <meta name="keywords" content="amaa, american martial arts academy, karate, tang soo do, martial arts, ohio, michigan" />
+   <meta name="keywords" content="amaa, american martial arts academy, karate, tang soo do, martial arts, fitness" />
    <meta name="description" content="AMAA Home Page.">
-   <meta name="author" content="Joseph Lefkovitz">
+   <meta name="author" content="Aaron Took">
    <meta charset="utf-8" />
 </head>
 
@@ -86,7 +86,7 @@
       
       <blockquote>
          <p><em>“Martial arts gives balance, cardio, strength training, and mental awareness. It's a mental and physical activity, which most people don't get. Very few sports offer that.”</em></p>
-         <p><em>Michael Mannino<br />International breaking champion, 5th Dan</em></p>
+         <p><em>Micheal Mannino<br />International breaking champion, 5th Dan</em></p>
       </blockquote>
       
       <div class="videoContainer">
