--- a/tournaments.html
+++ b/tournaments.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
    <!--
-   Author: Joseph Lefkovitz
-   Date:   4/25/2022
+   Author: Aaron Took
+   Date:   1/8/2023
    
    Filename: tournaments.html
    -->
@@ -17,7 +17,7 @@
    <meta name="viewport" content="width=device-width,initial-scale=1" />
    <meta name="keywords" content="amaa, american martial arts academy, karate, tang soo do, martial arts, fitness, tournaments, competition" />
    <meta name="description" content="AMAA Page with information about tournaments and competition.">
-   <meta name="author" content="Joseph Lefkovitz">
+   <meta name="author" content="Aaron Took">
    <meta charset="utf-8" />
 </head>
 
@@ -69,7 +69,7 @@
    <section>
       <div id="past-tournament-information">
          <h1 id="pageTitle">Past Tournament Information</h1>
-         <p class="welcomeMessage">AMAA will host our Fall-2018 Tournament at our Lake Orion school on November 9, beginning at 9:45am. Registration is available through your instructor or on the day of the event. Registration will open at 8:30 am on the day of the event with a Black Belt Meeting at 9:15 and Competition beginning at 9:45 am. <br />The cost for this local event is $30.00, not including boards.  <br />Competition is available in:<br /></p>
+         <p class="welcomeMessage">AMAA hosted our Fall-2018 Tournament at our Lake Orion school on November 9, at 9:45am. Registration was available through instructors or on the day of the event. Registration opened at 8:30 am on the day of the event with a Black Belt Meeting at 9:15 and Competition beginning at 9:45 am. <br />The cost for this local event was $30.00, not including boards.  <br />Competition was available in:<br /></p>
          <ul class="regList">
             <li>Traditional Forms</li>
             <li>Hardest Kick</li>
@@ -78,7 +78,7 @@
             <li>Sparring</li>
             <li>Team Forms (additional $10 fee)</li>
          </ul>
-         <p class="welcomeMessage">Students may compete in up to 3 events, not including team forms. <br />Boards for Board Breaking competition may be purchased at the event for $2.50 each. <br />Students competing in Sparring must wear full Sparring Gear, including head protector, chest protector, and groin cup (for males).  <br /><br />Please contact us with any questions.</p>
+         <p class="welcomeMessage">Students could compete in up to 3 events, not including team forms. <br />Boards for Board Breaking competition could be purchased at the event for $2.50 each. <br />Students competing in Sparring needed to wear full Sparring Gear, including head protector, chest protector, and groin cup (for males).</p>
          <a class="downloadPDF" target="_blank" href="attachments/tournament-registration-form.pdf"><button>Registration Form</button></a>
       </div>
       </section>
