--- a/class-information.html
+++ b/class-information.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
    <!--
-   Author: Joseph Lefkovitz
-   Date:   4/25/2022
+   Author: Aaron Took
+   Date:   1/8/2023
    
    Filename: class-information.html
    -->
@@ -17,7 +17,7 @@
    <meta name="viewport" content="width=device-width,initial-scale=1" />
    <meta name="keywords" content="amaa, american martial arts academy, karate, tang soo do, martial arts, fitness, classes, rules, schools, registration" />
    <meta name="description" content="AMAA Page with information about classes and registration.">
-   <meta name="author" content="Joseph Lefkovitz">
+   <meta name="author" content="Aaron Took">
    <meta charset="utf-8" />
 </head>
 
