--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
    <!--
-   Author: Joseph Lefkovitz
-   Date:   4/25/2022
+   Author: Aaron Took
+   Date:   1/8/2023
    
    Filename: contact.html
    -->
@@ -18,7 +18,7 @@
    <meta name="viewport" content="width=device-width,initial-scale=1" />
    <meta name="keywords" content="amaa, american martial arts academy, contact, comment, faq" />
    <meta name="description" content="AMAA Page with a contact form and frequently asked questions.">
-   <meta name="author" content="Joseph Lefkovitz">
+   <meta name="author" content="Aaron Took">
    <meta charset="utf-8" />
 </head>
 
