--- a/lake-orion-mi.html
+++ b/lake-orion-mi.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
    <!--
-   Author: Joseph Lefkovitz
-   Date:   4/25/2022
+   Author: Aaron Took
+   Date:   1/8/2023
    
    Filename: lake-orion-mi.html
    -->
@@ -17,7 +17,7 @@
    <meta name="viewport" content="width=device-width,initial-scale=1" />
    <meta name="keywords" content="amaa, american martial arts academy, karate, tang soo do, martial arts, fitness, lake orion, michigan, instructors, calendar" />
    <meta name="description" content="AMAA Page for the Lake Orion Michigan AMAA school including sign-up, instructors, location, and calendar">
-   <meta name="author" content="Joseph Lefkovitz">
+   <meta name="author" content="Aaron Took">
    <meta charset="utf-8" />
 </head>
 
