--- a/tournaments.html
+++ b/tournaments.html
@@ -25,7 +25,7 @@
    <header>
       <div class="navTop">
       <h1 id="siteNavbarTitle">American <br />Martial <br />Arts <br />Academy</h1>
-      <img src="images/instructors-header.jpg" id="headerImg" alt="AMAA Instructors" />
+      <img src="images/instructors-header.jpg" id="headerImg" alt="AMAA Instructors" style="max-width:100%"/>
       </div>   
    </header>
    <nav class="horizontal"><a id="navicon"><img src="images/navicon.png" id="navicon" alt="" /></a>
