--- a/clarkston-mi.html
+++ b/clarkston-mi.html
@@ -18,6 +18,7 @@
    <meta name="keywords" content="amaa, american martial arts academy, karate, tang soo do, martial arts, fitness, clarkston, michigan, instructors, calendar" />
    <meta name="description" content="AMAA Page for the Clarkston Michigan AMAA school including sign-up, instructors, location, and calendar">
    <meta name="author" content="Aaron Took">
+   <meta name="robots" content="noindex">
    <meta charset="utf-8" />
 </head>
 
