--- a/class-information.html
+++ b/class-information.html
@@ -18,6 +18,7 @@
    <meta name="keywords" content="amaa, american martial arts academy, karate, tang soo do, martial arts, fitness, classes, rules, schools, registration" />
    <meta name="description" content="AMAA Page with information about classes and registration.">
    <meta name="author" content="Aaron Took">
+   <meta name="robots" content="noindex">
    <meta charset="utf-8" />
 </head>
 
