--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
    <meta name="keywords" content="amaa, american martial arts academy, contact, comment, faq" />
    <meta name="description" content="AMAA Page with a contact form and frequently asked questions.">
    <meta name="author" content="Aaron Took">
+   <meta name="robots" content="noindex">
    <meta charset="utf-8" />
 </head>
 
