--- a/history-and-tradition.html
+++ b/history-and-tradition.html
@@ -18,6 +18,7 @@
    <meta name="keywords" content="amaa, american martial arts academy, karate, tang soo do, martial arts, fitness, history, tradition, values" />
    <meta name="description" content="AMAA Page with history and tradition of AMAA and Tang Soo Do.">
    <meta name="author" content="Aaron Took">
+   <meta name="robots" content="noindex">
    <meta charset="utf-8" />
 </head>
 
