--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
    <meta name="description" content="AMAA Home Page.">
    <meta name="author" content="Aaron Took">
    <meta name="google-site-verification" content="FMv2KqtiM-hLBtLf-2-A3DGAZzBVAscVHEdQGGpUYQ0" />
+   <meta name="robots" content="noindex">
    <meta charset="utf-8" />
 </head>
 
