--- a/tournaments.html
+++ b/tournaments.html
@@ -18,6 +18,7 @@
    <meta name="keywords" content="amaa, american martial arts academy, karate, tang soo do, martial arts, fitness, tournaments, competition" />
    <meta name="description" content="AMAA Page with information about tournaments and competition.">
    <meta name="author" content="Aaron Took">
+   <meta name="robots" content="noindex">
    <meta charset="utf-8" />
 </head>
 
