--- a/training-and-testing.html
+++ b/training-and-testing.html
@@ -18,6 +18,7 @@
    <meta name="keywords" content="amaa, american martial arts academy, karate, tang soo do, martial arts, fitness, training, testing, forms" />
    <meta name="description" content="AMAA Page with registration, form videos, and testing information.">
    <meta name="author" content="Aaron Took">
+   <meta name="robots" content="noindex">
    <meta charset="utf-8" />
 </head>
 
